<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.example.dopa.harjoitus4.MainActivity">

    <!-- Plus -->
    <Button
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/plusResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusNumber2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plusNumber1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/plusSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plusNumber2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusSign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plusResult"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plusSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/plus_sign"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/plusNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusNumber1"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Minus -->
    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/minusResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusNumber2"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <EditText
        android:id="@+id/minusNumber1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/minusSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusNumber1" />

    <EditText
        android:id="@+id/minusNumber2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusSign"
        app:layout_constraintTop_toBottomOf="@+id/plusNumber2" />

    <TextView
        android:id="@+id/minusResult"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/plusResult" />

    <TextView
        android:id="@+id/minusSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/minus_sign"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/minusNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusNumber1"
        app:layout_constraintTop_toBottomOf="@+id/plusSign" />

    <!-- Multiplication -->
    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplicationNumber2"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <EditText
        android:id="@+id/multiplicationNumber1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minusNumber1" />

    <EditText
        android:id="@+id/multiplicationNumber2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplicationSign"
        app:layout_constraintTop_toBottomOf="@+id/minusNumber2" />

    <TextView
        android:id="@+id/multiplicationResult"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplicationButton"
        app:layout_constraintTop_toBottomOf="@+id/minusResult" />

    <TextView
        android:id="@+id/multiplicationSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/multiplication_sign"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplicationNumber1"
        app:layout_constraintTop_toBottomOf="@+id/minusSign" />

    <!-- Division -->
    <Button
        android:id="@+id/divisionButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/divisionResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divisionNumber2"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <EditText
        android:id="@+id/divisionNumber1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/divisionSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationNumber1" />

    <EditText
        android:id="@+id/divisionNumber2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/divisionButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divisionSign"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationNumber2" />

    <TextView
        android:id="@+id/divisionResult"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divisionButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationResult" />

    <TextView
        android:id="@+id/divisionSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/division_sign"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/divisionNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divisionNumber1"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationSign" />

    <Button
        android:id="@+id/emptyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toStartOf="@+id/logButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divisionNumber2" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/emptyButton"
        app:layout_constraintTop_toBottomOf="@+id/divisionNumber2" />

</android.support.constraint.ConstraintLayout>
